--- a/contact.html
+++ b/contact.html
@@ -62,10 +62,10 @@
                  <br>       
                 </address>
          <div>
-             <form class="files">
+             <form class="files" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfzAsM39CsHCU9NBPgzr6nYrvTfIIR7B-6Ir4nnZeaaEwVbLQ/formResponse" >
                   Name:
                   <br>
-                  <input type="text">
+                  <input type="text" >
                   <br>
                   email: <br>
                   <input type="email" placeholder="abc@gmail.com">
