--- a/contact.html
+++ b/contact.html
@@ -39,15 +39,15 @@
                   <span class="street-address">H. NO: 8-2-269/19/5/R</span>
                   <br>
                   <span class="locality">
-                      Indra Nagar, kamalpuri colony
-                      <br>
-                      Phase-III,Road No. 2, Banjara Hills
+                    65 1st floor Albert Victor Road 1st Main Road
+                    <br>
+                    3rd cross Road,near chamarajpet police station
                   </span>
                   <br>
-                  <span class="locality">Hyderabad</span>
+                  <span class="locality">Bengaluru</span>
                   -
-                  <span class="postal-code">50073</span>
-                  <span class="region">TS</span>
+                  <span class="postal-code">560018</span>
+                  
                   <span class="country-name">India</span>
                  </div>
                  <span class="contact-no">contact no.:-</span>
